# motion-control-mecanum

./: CMakeLists.txt  README.md  package.xml
.github/workflows/: ci.yml
config/: dualshock.yaml  motion_control_mecanum_params.yaml  teleop_twist_joy_ps4.yaml
include/can/: can_interface.hpp  socket_can_interface.hpp
include/motion-control-mecanum/: control_parameters.hpp  motion_controller.hpp  motion_controller_node.hpp  motor_constants.hpp  motor_controller.hpp  motor_parameters.hpp  wheel_parameters.hpp
launch/: motion_control_mecanum_launch.py
src/can/: socket_can_interface.cpp
src/motion-control-mecanum/: motion_controller.cpp  motion_controller_entrypoint.cpp  motion_controller_node.cpp  motor_controller.cpp
test/: test_motion_controller.cpp  test_motion_controller_node.cpp  test_motor_controller_can.cpp
